welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:20: error: expected class or object definition
def marqueSol(){
^PictureMono3:25: error: expected class or object definition
def faireV(){
^PictureMono3:40: error: expected class or object definition
def seDeplacerAvantDeFaireLeV(){
^PictureMono3:48: error: expected class or object definition
def faireMotif(){
^PictureMono3:66: error: expected class or object definition
def faireLigne(){
^